# HelloCMake

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: config.h_.in  load3rdparty.cmake  messagecolor.cmake  utils.cmake
include/HelloCMake/: logger  main  sayfuck  sayhello
resource/: version.ver
src/: CMakeLists.txt
src/logger/: CMakeLists.txt  README.md
src/logger/inc/: logger.h
src/logger/src/: logger.cpp
src/main/: CMakeLists.txt
src/main/inc/: common.h  config.h_
src/main/src/: main.cpp
src/sayfuck/: CMakeLists.txt
src/sayfuck/inc/: sayfuck.h
src/sayfuck/src/: sayfuck.cpp
src/sayhello/: CMakeLists.txt
src/sayhello/inc/: sayhello.h
src/sayhello/src/: sayhello.cpp
